  values, separated by a dash, in the threshold. [#221]
- Added the ability, in the alerts of 'ambsens.pm', to support a range of two
  values, separated by a dash, in the threshold. [#221]
- Added support for FreeBSD NFS Server stats. [#238]
- Added the new option 'rrdtool_extra_options' to be able to include RRDtool
  extra options on every graph.
- Changed the main loop functionality using now the select() function, instead
  of the alarm()+pause() pair. This should improve the responsiveness on high
  system loads. [#230]
- Fixed the copyright year in 'monitorix.cgi'.
- Fixed in 'mail.pm to use the option 'mail_log' instead the hard coded path I
  forgot to remove when adding the Exim support.
  	(thanks to Jean-Marc Didelot, jm.didelot AT teraneo.fr for pointing this out)
- Fixed to support to show the usage and disk I/O on filesystem names that
  contain spaces. [#234]
- Fixed to ensure that the 'L' option in port.pm is optional.
- Fixed to make sure that a maximum of 9 values is accepted in the 'graph_0'
  and 'graph_1' options of 'squid.pm'; warn user otherwise. [#235]


3.11.0 - 14-Mar-2019
====================
- Added a complete graph to support external ambient sensors ('ambsens.pm').
  	(suggested by Zdenko Dolar, zdenko.dolar AT gmail.com)
- Added an advice in monitorix.conf(5) as a reminder that some default values
  are overwritten in the configuration files on certain systems.
  	(suggested by Sander Bos)
- Changed the way how the Used value in Memory graph is calculated. [#204]
- Changed the alert in 'system.pm' to use the minimum value between the second
  and the third load averages to obtain a more symmetric curve and a sooner
  cancellation of the alert.
  	(suggested by Michael Tosch)
- Added two new graphs (operations and bandwidth) for each pool in 'zfs.pm' to
  show iostats. [#190]
- Removed the 777 permissions bits in docs/monitorix.spec and Makefile for the
  'imgs/' directory. At the same time, when HTTP built-in is enabled, forced to